# CentJours

./: .gitignore  CLAUDE.md  LICENSE  README.md  plan.md  project.godot
.claude/: settings.json
.claude/hooks/: auto-continue.sh  doc-sync-check.sh
.github/workflows/: doc-sync.yml  windows-fast.yml  windows-heavy-nightly.yml  windows-validation.yml
.godot/: extension_list.cfg  global_script_class_cache.cfg
.godot/editor/: editor_layout.cfg  filesystem_cache10  main_menu.tscn-folding-ccf4ebcb47afa8f0189035e869c843a0.cfg  (+1 more)
assets/: icon.svg.import
cent-jours-core/: Cargo.toml  cent_jours_core.gdextension  cent_jours_core.gdextension.uid
cent-jours-core/src/: lib.rs
cent-jours-core/src/battle/: march.rs  mod.rs  resolver.rs
cent-jours-core/src/characters/: mod.rs  network.rs  order_deviation.rs
cent-jours-core/src/engine/: mod.rs  state.rs
cent-jours-core/src/events/: mod.rs  pool.rs
cent-jours-core/src/narratives/: mod.rs
cent-jours-core/src/politics/: mod.rs  system.rs
cent-jours-core/src/simulation/: mod.rs  monte_carlo.rs
cent-jours-core/tests/: action_resolution_flow.rs  march_preview_contract.rs  save_load_flow.rs
cent-jours-core/tests/common/: mod.rs
docs/: README.md  ai_prompts.md  architecture.md  balance_notes.md  codex_autonomous_workflow.md  codex_handoff.md  codex_overnight_plan.md  codex_session_prompts.md  dev_plan.md  development_principles.md  frontend_dev_plan.md  interfaces.md  project-scan-2026-03-21.md  ui_prototype.html
tests/: monte_carlo_balance.py
tools/: check_doc_sync.py  run_gdunit_windows.cmd
(+353 files in other folders)
